fix css to prevent constant scrollbar

--- a/src/components/mainpage.css
+++ b/src/components/mainpage.css
@@ -1,6 +1,6 @@
 .main_area {
 	width: 100%;
-	height: 100vh;
+	height: 90vh;
 }
 
 .main_content {
